tests/valid/kernel/lib/main.s

  .global _start
_start:
  add r0, r0, func
