tests/invalid/bad_add_imm.s
  add r0, r0, 0x1FFF
  